[project]
name = "quickpod-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

 [project.scripts]                                                                                
 "qpcli" = "QPCLI:main"                                                                   
                                                                                                  
 [build-system]                                                                                   
 requires = ["setuptools>=61.0"]                                                                  
 build-backend = "setuptools.build_meta" 
