[project]
name = "quickpod-cli"
version = "1.1.1"
description = "A Command-Line Tool that makes interfacing the QuickPod API easier. Automatable or usable with manual input."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

 [project.scripts]                                                                                
 "qpcli" = "QPCLI:main"                                                                   
                                                                                                  
 [build-system]                                                                                   
 requires = ["setuptools>=61.0"]                                                                  
 build-backend = "setuptools.build_meta" 
